Fixed layout issue based on feedback

--- a/less/styles.less
+++ b/less/styles.less
@@ -174,6 +174,14 @@ ul.tri-col {
   }
 }
 
-div.card-panel.panel div.panel-body h2 {
-  margin: 30px 0 0;
+div.card-panel.panel div.panel-body.panel-body-with-img {
+  h2,
+  h3,
+  p {
+    margin: 0;
+  }
+  h3 {
+    margin-bottom: 10px;
+  }
+  padding: 30px;
 }
